# punkito-tabs-oracle

./: .gitignore  CHECKLIST.md  DELIVERY_REPORT.md  DOCUMENTATION_INDEX.md  IMPLEMENTATION_COMPLETE.md  MILESTONE_1_SUMMARY.md  MILESTONE_2_IMPLEMENTATION.md  README.es.md  README.md  cli.py  client.py  pyproject.toml  test_glissando_validation.py
.github/workflows/: ci.yml
config/: settings.toml
config/locales/: en.json  es.json
docs/: ARCHITECTURE.md  ARTICULATION_DETECTION.md  MILESTONE_1.md
src/punkito_tabs_oracle/: cli.py  client.py  settings.py
src/punkito_tabs_oracle/api/: __init__.py  app.py
src/punkito_tabs_oracle/dsp/: pitch.py
src/punkito_tabs_oracle/ml/: separator.py
src/punkito_tabs_oracle/tab/: exporter.py  router.py
tests/: test_api.py  test_dsp.py  test_exporter.py  test_pitch_slides.py  test_router_dead_notes.py  test_tab.py
